--- a/.github/workflows/build_kernel.yml
+++ b/.github/workflows/build_kernel.yml
@@ -2,9 +2,9 @@ name: Build Kernel CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "14.0" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "14.0" ]
 
 jobs:
   build:
