--- a/.github/workflows/build_kernel.yml
+++ b/.github/workflows/build_kernel.yml
@@ -1,16 +1,16 @@
 name: Build Kernel CI
 
 on:
-  push:
-    branches: [ "14.0" ]
-  pull_request:
-    branches: [ "14.0" ]
+  workflow_dispatch:
 
 jobs:
-  build:
-
+  Kernel:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+       shell: bash
+       working-directory: ${{ github.workspace }}
+       
     steps:
     - uses: actions/checkout@v4
     - name: set permissions
